test/files/neg/t3160ambiguous.check
t3160ambiguous.scala:8: error: reference to List is ambiguous;
it is imported twice in the same scope by
import scala.collection.immutable._
and import Bippy._
  def f(x: List[Any]): String = ???  // ambiguous, because Bippy.List is accessible
           ^
one error found
